--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: black
         };
         #void{
-            color:whitesmoke;
+            color:white;
         };
     </style>
 </head>
