--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         body{
             background-color: black
         };
-        h1{
+        #void{
             color:white;
         };
     </style>
 </head>
 <body>
-    <h1>Void</h1>
+    <h1 id="void">Void</h1>
     <!--This is just a test-->
 </body>
 </html>>
