--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src=''></script>
     <style>
         body{
-            background-color: black
+            background-color: black;
         };
         #void{
-            color: white
+            color: white;
         };
     </style>
 </head>
