--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <style>
         body{
             background-color: black;
-        };
+        }
         #void{
-            color: white;
+            color: whitesmoke;
         };
     </style>
 </head>
 <body>
     <h1 id="void">Void</h1>
-    <!--This is just a test-->
 </body>
 </html>
