--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Marco</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href=''>
-    <script src=''></script>
     <style>
         body{
-            background-color: black;
+            background-color: blue;
         }
         #void{
             color: whitesmoke;
