--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>What are you doing</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
-        body{
-            background-color: black;
-        }
-        #void{
-            color: whitesmoke;
-        };
     </style>
 </head>
 <body>
-    <h1 id="void">Void</h1>
+    <img src="https://getwallpapers.com/wallpaper/full/2/6/d/88010.jpg" 
+         width="100%"
+         height="100%">
 </body>
 </html>
