--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     
 
   <footer style="background-color: black;">
-    <div class="d-flex justify-content-center pt-5 mb-3"><a class="text-white" href="#">Logo</a></div>
+    <div class="d-flex justify-content-center pt-5 mb-3"><a class="text-white" href="#">LandLord</a></div>
     <!-- <div class="container d-flex justify-content-center">
       <div class="row p-3">
         <div class="col"><a class="text-white" href="#">Social media 1</a></div>
