--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li class="active"><a href="index.html"><span>Join the club</span></a></li>
+                <li class="active"><a href="https://dorahacks.io/hackathon/19/?track=Gaming%20and%20Metaverse"><span>Join the club</span></a></li>
                 <!--Dropdown-->
                 <!-- <li class="has-children">
                   <a href="about.html"><span>Dropdown</span></a>
