--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </p>
           </div>
       </div>
-  
+  <div>
       <div class="row">
           <div class="col">
               <div class="timeline-steps aos-init aos-animate" data-aos="fade-up">
@@ -165,7 +165,7 @@
       </div>
   </div>
   </section>
-
+  <div class="d-flex justify-content-center">
   <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas" width=960 height=600></canvas>
     <div id="unity-loading-bar">
@@ -262,6 +262,7 @@
     };
     document.body.appendChild(script);
   </script>
+  </div>
   <section class="mb-5" id="Members"> <!--Team members-->
     <section class="container justify-content-center text-center mb-3">
       <h2 class="text-white mb-5" style="font-size: 3em;">Our Team</h2>
